Fix stretched canvas bug caused by style attribute on canvas

--- a/app/styles/_main.scss
+++ b/app/styles/_main.scss
@@ -142,6 +142,10 @@ svg.octicon {
   border-color: #406da7;
 }
 
+.pointer-cursor {
+  cursor: pointer;
+}
+
 @mixin centerSpinners() {
   @for $i from 1 through 5 {
     .spinner-center-#{$i} {
